--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
     "mongodb": "~2.6.11",
-    "simpl-schema": "^0.3.2"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "simpl-schema": "^0.3.2",
+    "tether": "^1.4.0"
   }
 }
