--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.3",
+    "bootstrap": "^4.0.0-alpha.2",
     "meteor-node-stubs": "~0.2.4",
     "mongodb": "~2.6.11",
     "react": "^15.6.2",
@@ -14,5 +15,19 @@
     "react-dom": "^15.6.1",
     "simpl-schema": "^0.3.2",
     "tether": "^1.4.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.7"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions",
+          "ie >= 9",
+          "and_chr >= 2.3"
+        ]
+      }
+    }
   }
 }
