--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "agnus",
   "private": true,
@@ -18,7 +16,10 @@
     "connect-route": "^0.1.5",
     "css-annotation": "^0.6.2",
     "fibers": "^2.0.0",
+    "google-cloud": "^0.57.0",
+    "griddle-react": "^1.9.0",
     "handlebars": "^4.0.11",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.19.1",
@@ -32,7 +33,8 @@
     "prerender-node": "^2.7.4",
     "react": "^15.6.2",
     "react-addons-pure-render-mixin": "^15.6.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
+    "react-router": "^4.2.0",
     "simpl-schema": "^0.3.2",
     "tether": "^1.4.0",
     "transliteration": "^1.6.2"
