--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "griddle-react": "^1.9.0",
     "handlebars": "^4.0.11",
     "history": "^4.7.2",
+    "i18next": "^10.2.1",
     "immutable": "^3.8.2",
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.19.1",
