add bank managment

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "fibers": "^2.0.0",
     "google-cloud": "^0.57.0",
     "griddle-react": "^1.9.0",
+    "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "history": "^4.7.2",
     "i18next": "^10.2.1",
     "immutable": "^3.8.2",
+    "materialize-css": "^0.100.2",
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.19.1",
     "mongodb": "2.2.30",
