--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "autoprefixer": "^7.1.5",
-    "babel-runtime": "^6.20.0",
+    "autoprefixer": "^7.2.5",
+    "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "^4.0.0",
     "bunyan": "^1.8.12",
     "bunyan-format": "^0.2.1",
     "connect": "^3.6.5",
@@ -17,22 +17,22 @@
     "css-annotation": "^0.6.2",
     "fibers": "^2.0.0",
     "google-cloud": "^0.57.0",
-    "griddle-react": "^1.9.0",
+    "griddle-react": "^1.11.1",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "history": "^4.7.2",
-    "i18next": "^10.2.1",
+    "i18next": "^10.3.0",
     "immutable": "^3.8.2",
     "materialize-css": "^0.100.2",
     "meteor-node-stubs": "^0.3.2",
-    "moment": "^2.19.1",
-    "mongodb": "2.2.30",
-    "node-geocoder": "^3.21.0",
-    "node-loggly-bulk": "^2.0.2",
+    "moment": "^2.20.1",
+    "mongodb": "^2.2.30",
+    "node-geocoder": "^3.21.1",
+    "node-loggly-bulk": "^2.2.1",
     "nodemailer-wellknown": "^0.2.3",
     "package": "^1.0.1",
-    "popper.js": "^1.12.5",
-    "postcss": "^6.0.13",
+    "popper.js": "^1.13.0",
+    "postcss": "^6.0.16",
     "postcss-js": "^1.0.1",
     "prerender-node": "^2.7.4",
     "react": "^15.6.2",
@@ -40,7 +40,7 @@
     "react-dom": "^15.6.2",
     "react-router": "^4.2.0",
     "simpl-schema": "^0.3.2",
-    "tether": "^1.4.0",
+    "tether": "^1.4.3",
     "transliteration": "^1.6.2",
     "twilio": "^3.11.0"
   },
