--- a/package.json
+++ b/package.json
@@ -5,34 +5,35 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "autoprefixer": "^7.2.5",
+    "@babel/runtime": "^7.0.0-beta.40",
+    "autoprefixer": "^7.2.6",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "bunyan": "^1.8.12",
     "bunyan-format": "^0.2.1",
-    "connect": "^3.6.5",
+    "connect": "^3.6.6",
     "connect-route": "^0.1.5",
     "css-annotation": "^0.6.2",
     "fibers": "^2.0.0",
     "google-cloud": "^0.57.0",
-    "griddle-react": "^1.11.1",
+    "griddle-react": "^1.11.2",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "history": "^4.7.2",
-    "i18next": "^10.3.0",
+    "i18next": "^10.4.1",
     "immutable": "^3.8.2",
     "materialize-css": "^0.100.2",
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.20.1",
-    "mongodb": "^2.2.30",
-    "node-geocoder": "^3.21.1",
+    "mongodb": "^2.2.34",
+    "node-geocoder": "^3.22.0",
     "node-loggly-bulk": "^2.2.1",
     "nodemailer-wellknown": "^0.2.3",
     "package": "^1.0.1",
     "popper.js": "^1.13.0",
-    "postcss": "^6.0.16",
+    "postcss": "^6.0.19",
     "postcss-js": "^1.0.1",
     "prerender-node": "^2.7.4",
     "react": "^15.6.2",
@@ -42,14 +43,15 @@
     "simpl-schema": "^0.3.2",
     "tether": "^1.4.3",
     "transliteration": "^1.6.2",
-    "twilio": "^3.11.0"
+    "twilio": "^3.11.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.2.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-module-resolver": "^2.7.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
