--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "start": "meteor run"
   },
+  "meteor": {
+    "vueVersion": 2
+  },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.46",
     "autoprefixer": "^7.2.6",
@@ -16,6 +19,7 @@
     "connect": "^3.6.6",
     "connect-route": "^0.1.5",
     "css-annotation": "^0.6.2",
+    "element-ui": "^2.4.4",
     "fibers": "^2.0.2",
     "google-cloud": "^0.57.0",
     "griddle-react": "^1.13.0",
@@ -44,8 +48,9 @@
     "tether": "^1.4.4",
     "transliteration": "^1.6.2",
     "twilio": "^3.15.1",
-    "vue": "^2.1.10",
-    "vue-meteor-tracker": "^1.0.3"
+    "vue": "^2.5.16",
+    "vue-meteor-tracker": "^1.2.0",
+    "vue-router": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
