--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "vueVersion": 2
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/preset-stage-1": "^7.0.0",
+    "@babel/runtime": "7.0.0-beta.55",
     "autoprefixer": "^7.2.6",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
@@ -22,14 +25,14 @@
     "element-ui": "^2.4.4",
     "fibers": "^2.0.2",
     "google-cloud": "^0.57.0",
-    "griddle-react": "^1.13.0",
+    "griddle-react": "^1.13.1",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
     "history": "^4.7.2",
     "i18next": "^10.6.0",
     "immutable": "^3.8.2",
     "materialize-css": "^1.0.0-beta",
-    "meteor-node-stubs": "^0.3.3",
+    "meteor-node-stubs": "^0.4.1",
     "moment": "^2.22.1",
     "mongodb": "^2.2.35",
     "node-geocoder": "^3.22.0",
@@ -39,7 +42,7 @@
     "popper.js": "^1.14.3",
     "postcss": "^6.0.21",
     "postcss-js": "^1.0.1",
-    "prerender-node": "^2.8.0",
+    "prerender-node": "^3.2.1",
     "react": "^15.6.2",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -47,7 +50,7 @@
     "simpl-schema": "^0.3.2",
     "tether": "^1.4.4",
     "transliteration": "^1.6.2",
-    "twilio": "^3.15.1",
+    "twilio": "^4.6.0",
     "vue": "^2.5.16",
     "vue-meteor-tracker": "^1.2.0",
     "vue-router": "^2.3.0"
@@ -56,9 +59,9 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.2.0",
-    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^2.7.1",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
@@ -80,5 +83,11 @@
         ]
       }
     }
-  }
+  },
+  "presets": [
+    "@babel/preset-stage-1"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-optional-chaining"
+  ]
 }
